--- a/index.html
+++ b/index.html
@@ -11,46 +11,65 @@
 	<title>Exceptional Realty Group - Luxury Homes - About</title>
 </head>
 <body>
-	<!-- This body is the entire viewable are of the web page. For example we can see text, links, images, and media. -->
-
-	<h1>Exceptional</h1>
-	<h2>Realty Group</h2>
 	
+	<header>
 
-	<!-- links -->
-	<a href="index.html">About</a>
-	<a href="new-properties.html">New Properties</a>
-	<a href="real-estate-listings.html">Listings</a>
-	<a href="market-report.html">Market Report</a>
-	<a href="contact.html">Contact</a>
-	<a href="http://hud.gov" target="_blank">H.U.D.</a>
+		<h1>Exceptional</h1>
+		<h2>Realty Group</h2>
+		
+		<nav>
+			<!-- links -->
+			<a href="index.html">About</a>
+			<a href="new-properties.html">New Properties</a>
+			<a href="real-estate-listings.html">Listings</a>
+			<a href="market-report.html">Market Report</a>
+			<a href="contact.html">Contact</a>
+			<a href="http://hud.gov" target="_blank">H.U.D.</a>
+		</nav>
 
+	</header>
 
+	<section id="featured-property">
+		<figure>
+		
+			<img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
 
-	<img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+			<figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards</figcaption>
 
-	<!-- 
-	folder name/ = go inside the folder
-	file name = use a file in the current folder
-	../ = leave the current folder and go up to the parent folder
-	-->
+		</figure>
 
-	<p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	
-	<p>Hello Moon.</p>
+		<!-- 
+		folder name/ = go inside the folder
+		file name = use a file in the current folder
+		../ = leave the current folder and go up to the parent folder
+		-->
 
-	<!-- Promo Video -->
-	<video controls>
-		<source src="videos/real-estate.mp4" type="video/mp4">
-		<source src="videos/real-estate.ogv" type="video/ogg">
-		Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
-	</video>
+		<p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		
+		<p>Hello Moon.</p>
+	</section>
 
+	<section id="promotional">
+		<figure>
+			<!-- Promo Video -->
+			<video controls>
+				<source src="videos/real-estate.mp4" type="video/mp4">
+				<source src="videos/real-estate.ogv" type="video/ogg">
+				Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser.</a>
+			</video>
+			<figcaption>Exeptional Realty Group Promotional Video - Source: archive.org</figcaption>
+		</figure>
+
+	</section>
+
+	<footer>
+		&copy; 2019 Exceptional Realty. All Rights Reserved.
+	</footer>
 
 </body>
 
